--- a/app/Resources/views/category/index.html.twig
+++ b/app/Resources/views/category/index.html.twig
@@ -8,7 +8,7 @@
             <tr>
                 <th>Id</th>
                 <th>Name</th>
-                <th>Actions</th>
+                <th>Edit</th>
             </tr>
         </thead>
         <tbody>
@@ -17,7 +17,8 @@
                 <td>{{ category.id }}</td>
                 <td>{{ category.name }}</td>
                 <td>
-                    <a class="btn-default btn-sm gray-link" href="{{ path('category_edit', { 'id': category.id }) }}">Edit</a>
+                    <a class="gray-link" href="{{ path('category_edit', { 'id': category.id }) }}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                 </td>
             </tr>
         {% endfor %}
@@ -26,7 +27,9 @@
 
     <div class="margin-height-4 text-center">
             <a class="btn btn-info" href="{{ path('category_new') }}">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                 Create a new category
             </a>
     </div>
+
 {% endblock %}
