--- a/app/Resources/views/news/article_edit.html.twig
+++ b/app/Resources/views/news/article_edit.html.twig
@@ -11,7 +11,8 @@
             {{ form_row(form.author) }}
             {{ form_row(form.category) }}
             {{ form_row(form.publicationDate) }}
-            {{ form_row(form.description) }}
+            {{ form_row(form.description, {'attr': {'rows': 4 }}) }}
+            {{ form_row(form.similarArticles, {'attr': {'size': 10 }})}}
             {{ form_row(form.body) }}
             <button class="btn btn-primary center-block" type="submit">
                 {% trans %}
