--- a/web/assets/style_fixes.css
+++ b/web/assets/style_fixes.css
@@ -13,6 +13,16 @@
     font-style: inherit;
 }
 
+
+.similar-block {
+    background-color: #eefeff;
+    padding: 1vw;
+    border-radius: 1vh;
+}
+.similar-block-title {
+    color: #2b669a;
+}
+
 .navbar-brand {
     float: left;
     height: 50px;
@@ -60,9 +70,23 @@ div.hr hr {
     display: none;
 }
 
+.separator {
+    margin-bottom: 2vh;
+    background: #59f  no-repeat scroll center;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    width: 70vw;
+    height: 2px;
+}
+
 .margin-height-4 {
     margin-top: 4vh;
     margin-bottom: 4vh;
+}
+
+.margin-height-1 {
+    margin-top: 1vh;
+    margin-bottom: 1vh;
 }
 
 .margin-left-8 {
@@ -99,10 +123,35 @@ div.hr hr {
     display: block;
 }
 
+.block-link-sm {
+    color: inherit;
+    padding: 1vh;
+    width:100%;
+    height:100%;
+    top:0;
+    left: 0;
+    z-index: 1;
+    display: block;
+}
+
 .block-link:hover {
     background-color: #f3f9ff;
     text-decoration: none;
     padding: 3vh;
+    border-radius: 1vh;
+    color: inherit;
+    width:100%;
+    height:100%;
+    top:0;
+    left: 0;
+    z-index: 1;
+    display: block;
+}
+
+.block-link-sm:hover {
+    background-color: #b3e0e5;
+    text-decoration: none;
+    padding: 1vh;
     border-radius: 1vh;
     color: inherit;
     width:100%;
