--- a/app/Resources/views/user/edit.html.twig
+++ b/app/Resources/views/user/edit.html.twig
@@ -12,7 +12,7 @@
             </tr>
             <tr>
                 <th>
-                    <a class="btn-default btn" href="{{ path('admin') }}" role="button">
+                    <a class="btn-default btn" href="{{ path('user_index') }}" role="button">
                         Back to the list
                     </a>
                 </th>
