--- a/app/Resources/views/administration/moderator.html.twig
+++ b/app/Resources/views/administration/moderator.html.twig
@@ -6,7 +6,16 @@
     <header>
         <h1 class="text-center lead">Manage articles</h1>
     </header>
-    <div id="entities-grid"></div>
+    <div id="entities-grid">
+
+    </div>
+
+    <div class="margin-height-4 text-center">
+        <a class="btn btn-info" href="{{ path('article_edit',{'id':'new'}) }}">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            Create a new article
+        </a>
+    </div>
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
