--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -59,8 +59,9 @@
                                     </div>
                                     <button type="submit" class="btn btn-default" value='search'>
                                         {% trans %}
-                                        Search <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                                        Search
                                         {% endtrans %}
+                                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                                     </button>
                                 </form>
                             </li>
