--- a/app/Resources/views/registration/register.html.twig
+++ b/app/Resources/views/registration/register.html.twig
@@ -12,7 +12,10 @@
             {{ form_row(form.plainPassword.second) }}
             {{ form_row(form.wantNewsletter) }}
         <div>
-            <button class="btn btn-primary" type="submit">Register!</button>
+            <button class="btn btn-primary" type="submit">
+                Sign up
+                <span class="glyphicon glyphicon-collapse-up" aria-hidden="true"></span>
+            </button>
         </div>
         {{ form_end(form) }}
         <br>
