--- a/web/assets/style_fixes.css
+++ b/web/assets/style_fixes.css
@@ -169,11 +169,11 @@ div.hr hr {
 .gray-link {
     color: #404040;
     font-weight: 600;
-    font-size: 2vh;
+    font-size: 10dppx;
 }
 
 .gray-link:hover {
     color: #303030;
     text-decoration: none;
-    text-shadow: 0px 0px 1vh #808080;
+    text-shadow: 0px 0px 10px #808080;
 }
